--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Weather</string>
     <string name="search_city">Pesquise por Cidade</string>
     <string name="search">Procurar</string>
+    <string name="city">Cidade</string>
+    <string name="min">Mínima</string>
+    <string name="max">Máxima</string>
+    <string name="sunrise">Pôr do Sol</string>
+    <string name="humidity">Umidade</string>
+    <string name="sunset">Nascer do Sol</string>
 </resources>
